--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "check": "tsc --noEmit",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "cypress:open": "cypress open",
     "start": "npm run check && parcel src/index.html"
   },
   "repository": {
@@ -28,8 +28,10 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@testing-library/cypress": "^8.0.3",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
+    "cypress": "^10.11.0",
     "parcel": "^2.7.0",
     "process": "^0.11.10",
     "typescript": "^4.8.4"
